Optimize accelerated machines and cache lifecycles; fix apiary inventory upgrades